# libmaxminddb

./: .gitignore  .gitmodules  .hgtags  .indent.pro  .travis.yml  .uncrustify.cfg  CMakeLists.txt  Changes.md  Makefile.am  NOTICE  README  README.dev.md  README.md  TODO  _config.yml  appveyor.yml  bootstrap  common.mk  configure.ac  index.md  lychee.toml  mise.toml  mmdblookup.md
.github/: dependabot.yml
.github/workflows/: clang-addresssanitizer.yml  clang-analyzer.yml  codeql-analysis.yml  pages.yml  precious.yml  test.yml
_layouts/: default.html
_site/: Changes.md  index.html  index.md
apps/: IPDB_Helper.c  MMDB_Helper.c  MMDB_Helper.h  MMIPDB_Helper.c  MMIPDB_Helper.h  Makefile.am  country_lookup.c  ipdblookup.c  mmdbdump.c  mmdbdump6.c  mmdblookup.c  mmdblookup6.c  mmipdblookup.c
debian/: changelog  clean  control  copyright  docs  gbp.conf  libmaxminddb-dev.install  libmaxminddb-dev.manpages  libmaxminddb0.install  libmaxminddb0.symbols  mmdb-bin.manpages  not-installed  rules  watch
debian/patches/: fix-exec-includedir  series
debian/source/: include-binaries  options
debian/tests/: compile-open  control  mmdblookup
debian/upstream/: metadata
dev-bin/: indent-all.sh  make-man-pages.pl  make-release.sh  maybe-fake-man.sh  ppa-release.sh  regen-prototypes.pl  regen-win32-test-projs.pl  release.sh  uncrustify-all.sh  valgrind-all.pl
doc/: intro.md  libmaxminddb.md  mmdblookup.md  release.md
doc/pydemo/: configure.in  py_libmaxmind.c  setup.py  test.py
docs/: hugo.toml
docs/layouts/_default/: default.html
include/: maxminddb.h  maxminddb_config.h  maxminddb_config.h.cmake.in  maxminddb_config.h.in
libGeoIPDB/: GeoIPDB.h  GeoIPDB_Core.c  Makefile.am
libIPDB/: MMIPDB.h  MMIPDB_Core.c  Makefile.am
libgeoip2/: GeoIP2.h  GeoIP2_Core.c
libmaxminddb/: MMDB.h  MMDB_Core.c  Makefile.am
libmaxmindipdb/: MMIPDB.h  MMIPDB_Core.c
projects/: test.vcxproj.template
projects/VS12/: README  libmaxminddb.props  libmaxminddb.sln  libmaxminddb.vcxproj  libmaxminddb.vcxproj.filters  maxminddb_config.h
projects/VS12-tests/: bad_pointers.vcxproj  basic_lookup.vcxproj  data_entry_list.vcxproj  data_types.vcxproj  dump.vcxproj  get_value.vcxproj  get_value_pointer_bug.vcxproj  ipv4_start_cache.vcxproj  ipv6_lookup_in_ipv4.vcxproj  libtap.vcxproj  maxminddb_test_helper.vcxproj  metadata.vcxproj  no_map_get_value.vcxproj  read_node.vcxproj  shared.vcxproj  threads.vcxproj  version.vcxproj
src/: CMakeLists.txt  Makefile.am  data-pool.c  data-pool.h  libmaxminddb.pc.in  maxminddb-compat-util.h  maxminddb.c
t/: CMakeLists.txt  MMDB_test_helper.c  MMDB_test_helper.h  Makefile.am  aget_value_t.c  bad_data_size_t.c  bad_databases_t.c  bad_epoch_t.c  bad_pointers_t.c  bad_search_tree_t.c  basic_lookup_t.c  compile_c++_t.pl  data-pool-t.c  data_entry_list_t.c  data_types_t.c  double_close_t.c  dump_meta_t.c  dump_t.c  empty_container_metadata_t.c  endian_size_t.c  get_value_pointer_bug_t.c  get_value_t.c  ipv4_start_cache_t.c  ipv6_lookup_in_ipv4_t.c  lookup_t.c  lookup_v4_t.c  max_depth_t.c  maxminddb_test_helper.c  maxminddb_test_helper.h  metadata_pointers_t.c  metadata_t.c  mmdb_test_writer.h  mmdblookup_t.pl  no_map_get_value_t.c  open_t.c  overflow_bounds_t.c  read_node_t.c  test_helper.c  test_helper.h  threads_t.c  (+1 more)
t/data/: v4-24.mmdb  v4-28.mmdb  v4-32.mmdb  v6-24.mmdb  v6-28.mmdb  v6-32.mmdb
t/libtap/: tap.c  tap.h
